[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable MazeGenerator (A-maze-ing - 42)"
readme = "README_MazeGenerator.md"
requires-python = ">=3.7"
authors = [
            {name = "dtalapan"}, 
            {name = "mbotelho"}
          ]

[tool.setuptools]
py-modules = ["MazeGenerator"]